--- a/css/style.css
+++ b/css/style.css
@@ -160,12 +160,13 @@ h3{
 }
 
 fieldset{
-    width: 50%;
+    width: 70%;
     max-width: 28em;
-    min-height: 40%;
     margin-left: auto;
     margin-right: auto;
 }
+
+
 
 #skills{
     text-align: center;
@@ -178,8 +179,10 @@ fieldset{
     margin-right: auto;
 }
 
-#btn-sobre{
+.btn-link{
     max-width: 105px;
+    width: 105px;
+    text-align: center;
 }
 
 
@@ -241,11 +244,21 @@ section {
 .flex-input{
     display: flex;
     flex-direction: column;
-    height: 90%;
+    justify-content: space-between;
     width: 90%;
     padding: 7px;
     margin: 10px auto;
-    border-color: #087792;
+}
+
+textarea{
+    resize: horizontal;
+    height: 100px;
+}
+
+
+
+form{
+    height: 90%;
 }
 
 .cor:focus{
@@ -286,7 +299,6 @@ section {
 }
 
 #side-bar a{
-    width: 100%;
     height: 100%;
     display: inline-block;
 }
@@ -333,4 +345,40 @@ section {
         text-align: justify;
     }
 }
+
+
+@media (max-width: 450px){
+    .bx-menu{
+        background-color: red;
+        
+    }
+    #p-logo{
+        color: red;
+    }
+    .infor-esquerda #ola, #dev-sites{
+        font-size: 1.6rem;
+    }
+}
+
+#skills h2{
+    font-size: 36px;
+}
+    
+#skills h3{
+    font-size: 30px;
+}
+   
+#skills .ling{
+    font-size: 28px;
+}
+    
+#contactos h2{
+    font-size: 30px;
+}
+
+h2{
+    font-size: 40px;
+}
+
+
 
